crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__logical_operator__and.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/logical_operator/and.lox
---
success: true
exit_code: 0
----- stdout -----
false
1
false
true
3
true
false

----- stderr -----
