crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__logical_operator__and_truth.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/logical_operator/and_truth.lox
---
success: true
exit_code: 0
----- stdout -----
false
nil
ok
ok
ok

----- stderr -----
